* Make logs group-writable again.

* Fix a timeout crash in lastfmsubmitd.

0.30 (2006-05-31):
==================

* Use a spool directory for both the "cache" and reading new subs from
  plugins; no more locks, blocking, or possibly losing stuck submissions
  when restarting the daemon. If you are upgrading, you must move
  /var/cache/lastfm to /var/spool/lastfm.

* Removed lastfm.queue and lastfm.logger modules; everything is in
  lastfm (with simpler function names) or lastfm.marshaller. Non-Python
  writers should use mkstemp and print normally; there is no more need
  to fork.

* Replaced all --output options with --stdout.

* Updated a bunch of documentation.

0.29 (2006-05-06):
==================

* Fixed pesky GC error message that would appear when cleaning up after
  a failed attempt to grab the lock.

* Added a bunch of --help, and improved error messages.

* Fix some decoding calls in lastfmsubmit that weren't updated when
  things were reorganized.

0.28 (2006-04-18):
==================

* Recover correctly if a lastmp forked proccess fails.

* Log untagged files with the filename instead of None, and make a guess
  at the encoding if MPD breaks it somehow. This should fix a crash with
  certain files.

0.27 (2006-04-12):
==================

* Skip bad data rather than attempting to log it and causing errors.

* Install lastfmsubmit in /usr/lib/lastfmsubmitd, and use the Python
  queue-writer interface in lastmp instead.

* Check for a supplied submission time in lastfmsubmitd.

0.26 (2006-03-25):
==================

* Fix logging error when creating fifo.

0.25 (2006-03-24):
==================

* Added some documentation for plugin developers. Hoping to go 1.0 soon.

* Don't create lockfiles with --output; instead use /var/run/lastfm/lock
  but only if we are writing to the fifo. WARNING: I decided this was a
  good excuse to change the lastfm.queue.Writer interface while I still
  can, so if you are using that, please change your init args.
